xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__cast_empty_sequence_as_string.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"() cast as xs:string\")"
---
Err(
    SpannedType {
        src: "() cast as xs:string",
        span: SourceSpan {
            offset: SourceOffset(
                0,
            ),
            length: SourceOffset(
                20,
            ),
        },
    },
)
