xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__cast_empty_sequence_as_string_question_mark.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"() cast as xs:string?\")"
---
Ok(
    Empty,
)
