xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__cast_integer_as_string.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"1 cast as xs:string\")"
---
Ok(
    One(
        Atomic(
            String(
                String,
                "1",
            ),
        ),
    ),
)
