xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__castable_as_integer_success.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"1 castable as xs:integer\")"
---
Ok(
    One(
        Atomic(
            Boolean(
                true,
            ),
        ),
    ),
)
