xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__comma_simple_map.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"(1, 2), (3, 4) ! (. + 1)\")"
---
Ok(
    Many(
        [
            Atomic(
                Integer(
                    1,
                ),
            ),
            Atomic(
                Integer(
                    2,
                ),
            ),
            Atomic(
                Integer(
                    4,
                ),
            ),
            Atomic(
                Integer(
                    5,
                ),
            ),
        ],
    ),
)
