xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__compare_general_eq_sequence_false.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"(1, 2) = (3, 4)\")"
---
Ok(
    One(
        Atomic(
            Boolean(
                false,
            ),
        ),
    ),
)
